Added .py files, and additional templates. Also added database tables to models.py document

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% block head %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>
-    {% block title %}{% endblock %} - MyStory
+  {% block title %}{% endblock %} - MyStory
   </title>
   {% endblock %}
 </head>
 <body>
   <div class="content" id="content">
-    {% block content %}{% endblock}
+    {% block content %}{% endblock %}
   </div>
 
   <div class="footer" id="footer">
