--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,16 @@
     </p>
   </div>
 
+  <div class="loginButton" id="loginButton">
+    <button class="login" id="login">
+      Login
+    </button>
+
+    <button class="register" id="register">
+      Join
+    </button>
+  </div>
+
   <div class="homeMain" id="homeMain">
     <div class="readBox" id="readBox">
       <button class="readBtn" id="readBtn">
