--- a/templates/write.html
+++ b/templates/write.html
@@ -7,9 +7,11 @@
   </h1>
 
   <form class="storyForm" action="{{ url_for('write_story_action') }}" method="POST">
-    <input type="text" name="title" placeholder="Story Title" required>
-    <input type="text" name="synopsis" placeholder="What's your story about?" required>
-    <textarea name="story" placeholder="Tell us your story" required></textarea>
-    <button type="submit">Publish</button>
+    <input class="storyTitle" type="text" name="title" placeholder="Story Title" required>
+    <input class="storySynopsis" type="text" name="synopsis" placeholder="What's your story about?" required>
+    <textarea class="storyBody" name="story" placeholder="Tell us your story" required>Tell your tale!</textarea>
+    <button class="storyButton" type="submit">Publish</button>
   </form>
+{% endblock %}
+{% block footer %}
 {% endblock %}
