fixed the links, changed the buttons to links, and made them work with the app.py file

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,27 +13,30 @@
       We encourage you to write your short stories and share them with the community. 
     </p>
   </div>
-
+  
   <div class="loginButton" id="loginButton">
-    <button class="login" id="login">
-      Login
-    </button>
+    <a href="/login">
+      <h3>Login</h3>
+    </a>
+  </div>
 
-    <button class="register" id="register">
-      Join
-    </button>
+  <div class="registerButton" id="registerButton">
+    <a href="/register">
+      <h3>Join</h3>
+    </a>
   </div>
 
   <div class="homeMain" id="homeMain">
     <div class="readBox" id="readBox">
-      <button class="readBtn" id="readBtn">
+      <a href="/read" class="readBtn" id="readBtn">
         Read
-      </button>
+      </a>
     </div>
+
     <div class="writeBox" id="writeBox">
-      <button class="writeBtn" id="writeBtn">
+      <a href="/write" class="writeBtn" id="writeBtn">
         Write
-      </button>
+      </a>
     </div>
   </div>
   {% endblock %}
