--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="registerForm" id="registerForm">
-    <form action="{{ url_for('register_call')}}" class="register" id="register" method="POST">
+    <form action="{{ url_for('register')}}" class="register" id="register" method="POST">
       <input type="text" class="userName" id="userName">
       <label for="name">What's your name?</label>
       <input type="email" class="email" id="email">
