--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-{% set title = Register %}
+{% set title = "Register" %}
 {% extends 'base.html' %}
 
 {% block content %}
@@ -19,6 +19,5 @@
   </div>
 
 {% endblock %}
-{% block footer %}
-{% endblock %}
+
 
