set up more logic, and added tested the database connection. Getting an error when trying to upload a story, and cannot figure out the issue

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Ephesis&family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
+
+
   <div class="content" id="content">
     {% block content %}{% endblock %}
   </div>
@@ -26,7 +28,7 @@
       <p class="copy" id="copy">&copy; ricky h.</p>
     </div>
     <div class="contact" id="contact">
-      <a class="contactLink" href="mailto:ricy@ricky.com">say hi</a>
+      <a class="contactLink" href="mailto:ricky@ricky.com">say hi</a>
     </div>
   </footer>
   {% endblock %}
