Added media queries

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
     <div class="readContainer" id="readContainer">
       <a href="/read" class="readBtn" id="readBtn">
         <div class="readTextContainer">
-          <h3 class="readWord">Read Stories</h3>
+          <h3 class="readWord">Read</h3>
         </div>
       </a>
     </div>
@@ -59,7 +59,7 @@
     <div class="writeContainer" id="writeContainer">
       <a href="/write" class="writeBtn" id="writeBtn">
         <div class="writeTextContainer">
-          <h3 class="writeWord">Share a story</h3>
+          <h3 class="writeWord">Write</h3>
         </div>
       </a>
     </div>
