--- a/static/style.css
+++ b/static/style.css
@@ -424,3 +424,42 @@ footer {
   font-size: 1.2em;
   letter-spacing: 3px;
 }
+
+/* Media queries */
+
+@media (max-width: 600px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    font-size: .8em;
+    width: 100%;
+  }
+
+  .pageTopper, .registerHeader, .loginHeader {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 40px;
+  }
+
+  .login_register, .read_write {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: 'Tahoma', cursive;
+  }
+
+  .loginContainer, .registerContainer {
+    background-color: #97D8C4;
+    padding: 20px 0 30px 0;
+  }
+
+  .readContainer, .writeContainer {
+    background-color: #6B9AC4;
+    padding: 20px 0;
+  }
+
+  footer {
+    background-color: #FFB5C2;
+  }
+}
