--- a/templates/read.html
+++ b/templates/read.html
@@ -11,13 +11,19 @@
   </h1>
 </div>
 
+<p class="writeStoryTextOnRead">Want to write a story? Click below!</p>
+
+<div class="writeRedirectButton" id="writeRedirectButton">
+  <a href="/write" class="writeBtn" id="writeBtn">
+    <button class="storyButton" type="submit">Write</button>
+  </a>
+</div>
+
 <div>
   <label for="" class="readStoryTitle">
     {{storyTitle}}
   </label>
   <a class="readStoryButton"></a>
-</div>
-
-  
+</div>  
 {% endblock %}
 
